--- a/tip/593.md
+++ b/tip/593.md
@@ -1,4 +1,4 @@
-# TIP 593: Efficient List Item Test-and-Take
+# TIP 593: Efficient List Item Existence-Test-and-Take
 	Author:         Donal Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
@@ -26,7 +26,7 @@ to handle arrays and dictionaries).
 
 The `ltake` command should take three or more arguments:
 
- > **ltake**_listVarName_ _elemVarName_ _index_ ?_index_ ...?
+ > **ltake** _listVarName_ _elemVarName_ _index_ ?_index_ ...?
  
 The _listVarName_ argument should be the name of a variable containing a Tcl
 list, the _elemVarName_ should be the name of a variable that may have an
@@ -53,11 +53,11 @@ the rearrangement of the list contents.
 For example:
 
 ```
-set x {a b c d e}
-while {[ltake x y 2]} {
-    puts "TAKEN: $y"
+set lv {a b c d e}
+while {[ltake lv ev 2]} {
+    puts "TAKEN: $ev"
 }
-puts "LEFT: $x"
+puts "LEFT: $lv"
 ```
 
 will print:
