Linear, constant, what's an O(N) between friends?

--- a/tip/593.md
+++ b/tip/593.md
@@ -44,9 +44,9 @@ back to it after the extracted element is written to _elemVarName_; using the
 same variable name in both places is unlikely to be desired.)
 
 Code that uses this command may expect that taking from the `end` index will
-be implemented in linear time, effectively acting as a kind of "lpop".
-Removing from other indices (especially including `0`) may be slower due to
-the rearrangement of the list contents.
+be implemented in (typically) constant time, effectively acting as a kind of
+"lpop". Removing from other indices (especially including `0`) may be slower
+due to the rearrangement of the list contents.
 
 # Example
 
