add title to tip594

--- a/tip/594.md
+++ b/tip/594.md
@@ -1,4 +1,4 @@
-# TIP 594: 
+# TIP 594: modernize "file stat" interface
 	Author:         Emiliano Galivan <emilianogavilan@gmail.com>
 	Author:         aspect <tcler@abstracted-spleen.org>
 	State:          Draft
