Mark ticket link in metadata for 594

--- a/tip/594.md
+++ b/tip/594.md
@@ -8,6 +8,7 @@
 	Post-History:
 	Keywords:       Tcl, file
 	Tcl-Version:    8.7
+	Tcl-Ticket:     560c5e438c47f5fdd34846dbb333ab96cb905416
 -----
 
 # Abstract
