also mention [file lstat]

--- a/tip/594.md
+++ b/tip/594.md
@@ -13,8 +13,8 @@
 
 # Abstract
 
-This TIP proposes extending the `file stat` command to return a dictionary 
-if no `varName` argument is provided.
+This TIP proposes extending the `file stat` and `file lstat` commands to return
+a dictionary if no `varName` argument is provided.
 
 # Rationale
 
@@ -27,7 +27,8 @@ making the `varName` argument optional.
 
 # Specification
 
-The signature of `file stat` is changed from:
+The `file stat` and `file lstat` commands are both changed in exactly the same
+way.  Using `file stat` as an example, its signature is changed from:
 
     file stat name varName
 
