TIP #481 and #592 now Final

--- a/tip/481.md
+++ b/tip/481.md
@@ -1,13 +1,17 @@
 # TIP 481: `Tcl_GetStringFromObj()` with `size_t` length parameter
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        27-Oct-2017
 	Post-History:
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-481
+	Vote-Summary:	Accepted 4/0/2
+	Votes-For:	JN, KW, KK, MC
+	Votes-Against:	none
+	Votes-Present:	FV, SL
 -----
 # Abstract
 
