--- a/tip/592.md
+++ b/tip/592.md
@@ -1,12 +1,16 @@
 # TIP 592: Stop support for Windows XP, Server 2003, Vista, Server 2008 
 	Author:         Ashok P. Nadkarni <apnmbx-wits@yahoo.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        12-Dec-2020
 	Post-History:   
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-592
+	Vote-Summary:	Accepted 6/0/0
+	Votes-For:	FV, JN, KW, KK, MC, SL
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
