--- a/tip/402.md
+++ b/tip/402.md
@@ -8,7 +8,7 @@
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    8.7
-	Tcl-Branch:     jn-unc-vfs
+	Tcl-Branch:     tip-402
 -----
 
 # Abstract
@@ -42,16 +42,16 @@ This document proposes:
 
 	 > **POTENTIAL INCOMPATIBILITY**
 
- * As **//** becomes a special prefix, the **file split** will return
-   **//** as its first list element when the original path starts with a
-   double slash.
+ * As **//&lt;foo>** becomes a special prefix (where **&lt;foo>** can be anything not
+   containing '/'), the **file split** command will return **//&lt;foo>** as its
+   first list element when the original path starts with a double slash.
 
 # Compatibility
 
 On UNIX, this means that paths like **//usr/bin/tclsh** might no longer do
 what it did earlier, if a VFS exists which uses **//** as path prefix. If no
 such VFS exists, it will probably still work, only comparing normalized paths
-will no longer regard **//<foo>** as equal to **/<foo>**.
+will no longer regard **//&lt;foo>** as equal to **/&lt;foo>**.
 
 Handling of multiple slashes in other locations of the string will not
 change. So normalizing **/foo//bar** will still give **/foo/bar**.  The
@@ -71,13 +71,13 @@ On Windows and Cygwin, there is no change in behavior at all.
 # Alternatives
 
 Variations are possible in the handling of paths starting with 3 or more
-slashes. The current TIP implementation collapes more than 2 slashes to
+slashes. The current TIP implementation collapses more than 2 slashes to
 exactly 2 slashes, as the current Windows and Cygwin implementations do.
 
 # Reference Implementation
 
 A reference implementation is available at <https://core.tcl-lang.org/tcl> in branch
-_jn-unc-vfs_.
+_tip-402_.
 
 # Copyright
 
