TIP 529: Updated implementation branch, removed any information about the future removal of the function "Tk_CreatePhotoImageFormat".

--- a/tip/529.md
+++ b/tip/529.md
@@ -6,7 +6,7 @@
     Created:        07-Dec-2018
     Keywords:       Tk, image
     Tcl-Version:    8.7
-    Tk-Branch:     tip-529-image-metadata
+    Tk-Branch:     tip-529-image-metadata-no-match-method
 -----
 
 # Abstract
@@ -174,7 +174,7 @@ Note: parameters to change the rendered image should use the -format option. The
 
 When the image is rendered again due to a change of the options -file, -data or -format, the following procedure applies:
 
-   *   The current image metadata is replaced by an eventually  specified metadata.
+   *   The current image metadata is replaced by an eventually specified metadata.
    *   The image driver is called with the resulting metadata to render the image.
    *   Any metadata key outputted by the image driver rendering is set in the image metadata. In consequence, we get a merge of the current and the generated metadata.
 
@@ -314,7 +314,7 @@ A sample driver code snippet is:
 ### Image format driver interface
 
 For image format drivers, a new registration procedure is proposed which includes functions with the new parameters.
-In addition, the parameters are reordered to always have the order interp, input parameter, output parameter, accillary functions.
+In addition, the parameters are reordered to always have the order interp, input parameter, output parameter, auxiliary functions.
 
 The new stubs enabled function is:
 
@@ -348,17 +348,13 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
 ## Documentation
 
+Documentation is not started yet.
 The manual page of "Tk_CreatePhotoImageFormat" will describe the new version 3 interface.
-The following remark about the life cycle of the interfaces is added in a similar way as the current remark about the version 1 (old) interface:
-
-Version 3 format driver interface is recommended for new projects.
-Expect version 2 format driver interface and the command Tk_PhotoImageFormat to be removed with Tk 9.0.
-
-In addition, it might be a good idea to speak about version 1 (old), version 2 and version 3 interface.
+The manual page of "photo" will describe the -metadata option.
 
 # Implementation
 
-Implementation is in branch "tip-529-image-metadata".
+Implementation is in branch "tip-529-image-metadata-no-match-method".
 The following metadata keys are implemented:
 
    * gif: comment
@@ -368,9 +364,13 @@ Thanks to Paul Obermaier, the TkImg package has implemented the new interface an
 
 A set of test cases is included in the implementation.
 In addition, the TkImg package features additional tests for this patch which exercise additional features like stub table, image parameters.
-The TkImg patch links currently against the optional branch (see below), not against the branch tag tip-529-image-metadata.
+The TkImg patch links currently against the optional branch (see below), not against the branch tag tip-529-image-metadata-no-match-method.
 
 It was necessary to fix the file tests/earth.gif as the file is incomplete.
+
+Warning: the following chapters "Discussion" and "Rejected alternatives" contain a lot of information not relevant for the TIP.
+A reader only interested in the functionality of the TIP may stop here.
+
 # Discussion
 
 ## image find command planned by Paul Obermeier
@@ -385,7 +385,7 @@ image size without creating a photo image. Getting that information (and additio
 directly from the C-based image parsers would be faster and there would be no need to code that
 functionality twice.
 
-HaO: This functionality is prepared by the possibility that the match driver functions also may output metadata.
+This function is implemented in Tk branch "tip-529-image-metadata".
 
 ## Update DPI metadata property on image script
 
