TIP529: Note that documentation is started

--- a/tip/529.md
+++ b/tip/529.md
@@ -348,9 +348,8 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
 ## Documentation
 
-Documentation is not started yet.
-The manual page of "Tk_CreatePhotoImageFormat" will describe the new version 3 interface.
-The manual page of "photo" will describe the -metadata option.
+Documentation of the photo command exists.
+Documentation of "Tk_CreatePhotoImageFormat" may follow tomorrow.
 
 # Implementation
 
