TIP529 image metadata: documentation available, typo and reason to input metadata to all driver functions.

--- a/tip/529.md
+++ b/tip/529.md
@@ -120,8 +120,6 @@ Footnotes:
 
 (1) The current metadata is ignored if a metadata dict is given as command parameter.
 
-(3) The current metadata is ignored by the image export if a metadata dict is given as command parameter.
-
 Each command is now discussed within a subchapter:
 
 ### image create
@@ -293,8 +291,7 @@ A typical driver code snipped to check for a metadata key is:
 
 The receiving of the metadata by the format driver functions is only necessary for the Write functions to fulfill strictly the objective of the TIP.
 Nevertheless, it is implemented the same way as the -format parameter which is available to all functions.
-The reason is to support use cases not specified jet.
-My feeling is, that it would be sad to limit the functionality by not passing the metadata to all format driver functions.
+This allows to pass additional options to the driver only concerning the metadata processing.
 
 ### Receive a metadata dict from the driver (FileRead,StringRead)
 
@@ -348,8 +345,7 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
 ## Documentation
 
-Documentation of the photo command exists.
-Documentation of "Tk_CreatePhotoImageFormat" may follow tomorrow.
+Documentation is available in doc/photo.n for the script visible changes and doc/CrtPhImgFmt.3 for the C level interface.
 
 # Implementation
 
