--- a/tip/577.md
+++ b/tip/577.md
@@ -6,7 +6,7 @@
 	Post-History:   
 	Keywords:       Tcl index
 	Tcl-Version:    8.7
-	Tk-Branch:      strict-index
+	Tk-Branch:      enhanced-index
 -----
 
 # Abstract
@@ -22,9 +22,9 @@ So "4+5" and "end-1" will now be accepted, just as any other form accepted by
 In addition, the empty string is accepted in Tk as valid index. It means the same
 as `-1` so _not available_. In Tk this is more natural, since the default of many
 options is already the empty string. The default value of the `-underline` option
-so because the empty string, and setting `-underline` to the empty string means
+becomes the empty string. Setting `-underline` to the empty string means
 no underlining. This default value change will be only done when Tk is compiled
-with Tk 9.0 headers, in order to give applications more time to adapt to this
+with Tcl 9 headers, in order to give applications more time to adapt to this
 usage (see _Compatibility_ section below).
 
 # Rationale
@@ -36,28 +36,27 @@ $ wish8.6
 % menu .m
 % .l index 0
 0
-% .l index none
+% .l index none _(listbox doesn't know about `none`)_
 bad listbox index "none": must be active, anchor, end, @x,y, or a number
-% .m index none
+% .m index none _(menu does know about `none`)_
 none
 % .m index 0
 none
-% .m index foo
-bad menu entry index "foo"
 </pre>
 
-We see that menu's have a different way to indicate 'not found' compared to other widgets.
+We see that menu's have a different way to indicate _not available_ compared to other widgets.
 
 A request is done already a long time ago, to make index handling in Tk more flexible.
 See:  [`widgets indices enhancement`](https://core.tcl-lang.org/tk/tktview?name=1ef1ae2177)
-This TIP implements part of this request (only the `active-int` form is not implemented.
+This TIP implements part of this request (only the `active-<integer>` form is not implemented.
 
 
 # Specification
 
   * Tk indices (e.g. the value of the `-underline` option) will accept all forms
-    accepted by `Tcl_GetIntFromIndex()`, and also the empty string meaning _not available_.
-    So `-underline end-1` means underline one character before the last one of the string.
+    accepted by `Tcl_GetIntFromIndex()`, and also the empty string. So
+    `-underline end-1` means underline one character before the last one of the
+    string. `-underline {}` means no underlining, the same as `-underline -1`.
   * Indices in menu's, which currently use `none` as default, will be changed to use
     the empty string as default. The use of `none` in menu's is now considered
     deprecated, but still supported as long as Tk is compiled with Tcl 8.x headers.
@@ -66,7 +65,7 @@ This TIP implements part of this request (only the `active-int` form is not impl
     option is implemented, which is almost the same as `TK_OPTION_INT`, but in stead
     of only integers, accepts all those index forms as well. 
   * When Tk is compiled with Tcl 9 headers, the default `-underline` value becomes
-    the empty string in stead of -1. When compiled with Tcl 8 headers, `-1` is still
+    the empty string in stead of `-1`. When compiled with Tcl 8 headers, `-1` is still
     the default.
   * When Tk is compiled with Tcl 9 headers, all commands which currently report
     _not available_ as `-1`, will start returning the empty string in stead.
@@ -75,17 +74,17 @@ This TIP implements part of this request (only the `active-int` form is not impl
 
 When compiled with Tcl 8.x headers, this is almost 100% compatible. Except for
 menu commands which currently use the inconsistent `none` keyword (see above example)
-they will start returning the empty string.
+they will start using the empty string in stead (but `none` still works in Tcl 8.x).
 
-Code can easily be made compatible in any environment. Just don't check against
-the value `-1` any more, but use the `< 0` check: Since comparing the empty
-string with `0` in Tcl uses string compare, it gives the same result as
+Code can easily be made working in both Tcl 8.x and 9.x environments. Just don't
+check against the value `-1` any more, but use the `< 0` check: Since comparing the
+empty string with `0` in Tcl uses string compare, it gives the same result as
 comparing `-1` with `0`. All Tk utilities and demo's are already modified to
 do this check consistently.
 
 # Implementation
 
-See the [`strict-index`](https://core.tcl-lang.org/tk/timeline?r=strict-index) branch.
+See the [`enhanced-index`](https://core.tcl-lang.org/tk/timeline?r=enhanced-index) branch.
 
 # Copyright
 
