New treeview item option -hidden. Clarifications around cell tags.

--- a/tip/552.md
+++ b/tip/552.md
@@ -103,6 +103,11 @@ item, it can be set by tags.
 A new item option **-height** *height* is added.
 This controls the height of the item, in multiples of **-rowheight**. Default is 1.
 
+## Item hiding
+
+A new item option **-hidden** *bool* is added.
+If true, the item and any of its decendants are hidden. Default is 0.
+
 ## Automatic -rowheight.
 
 If the style do not set -rowheight, it is filled in based an current font and layout for an item.
@@ -112,12 +117,20 @@ An Item and a Cell layout is measured with the style's settings, and the resulti
 
 To control appearance of individual cells, tags can be set on cells as well as items.
 The set of tags is shared between items and cells, so things like **tag configure** are not affected.
+This does not mean that all tag options are supported by both, in particular
+**-image** and **-imageanchor** are currently not supported by cells.
+Future expansions could add images to cells, and maybe even have cell-unique settings.
+
+Cell tags are distinct from item tags and they do not interfere except visually.
+Cell tags take precedence over item tags when drawing.
 
 A new subcommand **tag cell add** is added, mirroring the present **tag add** but operating on cells.
 
 A new subcommand **tag cell remove** is added, mirroring the present **tag remove** but operating on cells.
 
 A new subcommand **tag cell has** is added, mirroring the present **tag has** but operating on cells.
+
+Cell tags are, like cell values, locked to a column number. Changes to **-columns** or  **-displaycolumns** do not affect cell tags.
 
 # Rejected alternatives
 
