TIP 529: image metadata: English corrections by Andreas, thanks.

--- a/tip/529.md
+++ b/tip/529.md
@@ -40,7 +40,7 @@ I authored an extension to the Img patch to specify the dpi field of a bmp file 
 
     myimage write file.bmp -format [list bmp -resolution 300 i]
 
-This may be expressed (when all packages are adopted) by:
+This may be expressed (when all packages are adapted) by:
 
     myimage configure -metadata [dict create DPI 300.0]
     myimage write file.bmp
@@ -86,8 +86,8 @@ If a particular image does not specify any keys (whether during creation or othe
 
 Each photo image format driver may define additional keys and may decide to use them for input (as a parameter for image read and/or image write), output (as an image read result) or both.
 
-The TIP implementation does not target to implement all possible keys of all image formats for reading and writing imediately.
-Image key format may grow over time on a use-case basis.
+The TIP implementation does not target to implement all possible keys of all image formats for reading and writing immediately.
+The set of predefined image keys may grow over time on a use-case basis.
 
 ## Commands
 
@@ -102,7 +102,7 @@ The following commands are extended by a -metadata parameter:
     myimage write -metadata $metadict
 
 Any image format handler may use the content of the metadata dict.
-This may be an ongoing process, specially within the Img patch.
+This may be an ongoing process, especially within the Img package.
 
 Here is an overview, which command reads or sets the metadata dict:
 
@@ -132,8 +132,9 @@ As an example, a gif file with a comment would create a comment metadata key wit
     % myimage cget -metadata
     Comment "This is the image comment"
 
-A metadata dict given on the command line will be merged with the parsed metadata dict with priority to the file metadata.
-This allows to specify default values for keys which should be present.
+A metadata dict given on the command line will be merged with the parsed metadata dict.
+The meta data read from the file will be given priority.
+This enables the specification of default values for keys which should be present.
 
 An example with the same image as above:
 
