TIP529 image metadata: in voting state

--- a/tip/529.md
+++ b/tip/529.md
@@ -2,7 +2,7 @@
     Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
     State:          Draft
     Type:           Project
-    Vote:           Pending
+    Vote:           In progress
     Created:        07-Dec-2018
     Keywords:       Tk, image
     Tcl-Version:    8.7
